# CDIxx

./: .gitignore  CMakeLists.txt  Makefile  env.sh  shell.nix
gnuplot_script/: plot.plt  plotNoise.plt  plot_Mearsured_Reconstructed_Spectrum.plt  plot_bar.plt  plot_frog.plt  plot_hj_residual.plt  plot_hj_spectrum.plt  plot_losses.plt  plot_mnist_spectrum.plt  plot_phaseRetrive_Error.sh  plot_prtf.plt  plot_psnr.plt  plot_rawSpectrum.plt  plot_residual.plt  plot_spectPhase.plt
html/: ExperimentLog.txt  autofill.js  cdi.cfg  compute_prtf.sh  createWorkDir.sh  dictionary.txt  fdtd.html  index.html  index.js  killPtycho.sh  main.js  myenv.sh  process.php  ptycho.html  readfile.php  runCDI.sh  runProcessPtycho.sh  runPtycho.sh  runPulseGen.sh  runStacker.sh  runbash.php  runcommand.php  savefile.php  selectGPU.sh  setSpectrum.sh  setpath.php  startServer.sh  stream.sh  styles.css  writefile.php
html/default/: cdi.cfg  ptycho.cfg  pulse.cfg
include/: CCTV.h  FGA.h  FGA.hpp  algorithm.h  beamDecomposition.hpp  broadBand.h  broadBand.hpp  cdi.h  cdi.hpp  cdilmdb.h  cdilmdb.hpp  common.h  cuPlotter.h  cuPlotter.hpp  cub_wrap.h  cub_wrap.hpp  cudaConfig.h  cudaConfig.hpp  cudaDefs.h  cudaDefs_h.cu  dataSetLMDB.h  experimentConfig.h  experimentConfig.hpp  fdtd3d.hpp  format.h  format.hpp  freetype.h  freetype.hpp  frog.h  frog.hpp  holo.h  holo.hpp  imageFile.h  imageFile.hpp  imageReader.h  imgio.h  imgio.hpp  material.h  material.hpp  matrixInverse.h  (+30 more)
include/gui/: cairoPainter.h  cairoPainter.hpp  dataViewer.h  dataviewerWin.h  dataviewerWin.hpp  dataviewerWinWrapper.h  dataviewerWinWrapper.hpp  imagePainter.hpp
obsolete/: algorithm.c  beamGenerator.cpp  cdi.cpp  colormap.cpp  editImage.cpp  extractImageData.cpp  fftw.cu  fftw.h  imageReader.h  matrixMono.cpp  phaseUnwrapping.cpp  readCCDResponse.cpp  sparse.h  testmatrixGen.cpp  torchConfig.cc  train.cc  tvFilter.cu  unet.cpp
python/: Deep.py  Discreminator.py  Discreminator_backward.py  Discreminator_v0.py  Discriminator.py  Discriminator_backward.py  FGAtest.py  GAN.py  GAN_predict.py  GAN_train.py  ImgAttention.py  UAttention.py  UAttention_train.py  UNet.py  UNet_light.py  conv.py  discreminator_train.py  drawStruct.py  gptclient.py  gptqueue_cached.py  imgIO.py  mUNet.py  model.py  multi-dataloader.py  mygpt4all.py  pyreadLMDB.py  readfrog.py  sesolver.py  sesolver1.py  sesolver2.py  take_avg.py  test.py  testexp.py  train.py  unetDataLoader.py
python/calculators/: curv.plt  spectrometer.py  transmission.py
script/: getpsnr.sh  texFormula.sh
src/common/: common.cc  imageReader.cc  memManager.cc  orthFitter.cc  readCXI.cc  readConfig.cc
src/cython/: cythonLoader.pyx  imageIO.pyx  readHj.pyx  unetDataLoader.pyx
src/gpu/: CCTV.cu  FISTA.cu  SVD.cu  bandwidthtest.cu  beamDecomposition.cu  cdi.cu  cuPlotter.cc  cuPlotter.cu  cub_wrap.cu  cudaCodes.cu  cudaConfig.cu  cudaDefs.cu  experimentConfig.cu  fdtd3d.cu  frog.cu  holo.cu  mnistData.cu  monoChromo.cu  orthFitter.cu  ptycho.cu  sesolver.cu  tvFilter.cu
src/gpu/separateCode/: cdi.cu  cuPlotter.cu  cub_wrap.cu  cudaConfig.cu  frog.cu  orthFitter.cu  ptycho.cu
src/gpu_common/: cuPlotter.cc  cuPlotter.cu  cub_wrap.cu  cudaConfig.cu  cudaDefs.cu
src/gpu_ext/: fftw.cu  matrixGen.cu  orthFitter.cu
src/gui/: cairoPainter.c  cairopainter.ui  dataViewer.c  dataviewerWin.c  dataviewerWinWrapper.cc  imagePainter.c  imagepainter.ui  resource.xml  window.ui
src/independant/: cdilmdb.c  freetype.c  imgio.c  imgio.cc  interpolation.cc  material.cc  matrixInverse.cc  memManager.cc  mnistData.cc  preview.c  preview.cc  readCXI.cc  readConfig.cc  streamer.c  videoWriter.cc  writePng.c
src/post_gpu/: FGA.cc  FISTA.cc  beamDecomposition.cc  broadBand.cc  cdi.cc  cuPlotter.cc  experimentConfig.cc  holo.cc  misc.cc  mnistData.cc  monoChromo.cc  orthFitter.cc  propagator.cc  readCXI.cc  spectImaging.cc  spectPhase.cc
src/torch/: dataSetLMDB.cc  mnistData.cc
src/vtk/: WriteVTI.cc
util/: CCTV.cu  DisplayImage.cpp  TG.cpp  bandwidthtest.cpp  beamDecomposition.cpp  beamGenerator.cpp  beamGenerator.cu  cdi.cpp  cdi.cu  cdi_dev.cpp  cdi_dev.cu  colorbar.cpp  colormap.cpp  cup.cpp  editImage.cpp  fdtd2d.cu  fdtd3d.cpp  fdtd3d.cu  fftDemo.cpp  fftDemo.cu  freetype.cpp  frog.cpp  frog.cu  gui_cdi.cpp  holo.cpp  holo.cu  interp.cpp  mono.cpp  multiWLSolver.cpp  multi_ptycho.cpp  mwlholo.cu  processimg.cpp  processimg.cu  processimg_ptycho.cpp  profile.cpp  propagatorDemo.cpp  propagatorDemo.cu  ptycho.cpp  ptycho.cu  pulseGen.cpp  (+25 more)
util/gui/: gui_cdi.cpp
